B-F Backup Sandbox 30.4.12/src/objects/Asset__c.object
<CustomObject>
    <description>Asset management for Australia</description>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Asset Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disputed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement #</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetNumber__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AssetNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Model</label>
        <referenceTo>Asset_Models__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Tag__c</fullName>
        <label>Asset Tag</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Type</label>
        <referenceTo>Asset_Type__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Branding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Branding</label>
        <referenceTo>Fridge_In_Fills__c</referenceTo>
        <relationshipLabel>Assets (External Branding)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fridge_Details_Incorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fridge Details Incorrect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fridge_In_Fill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fridge In Fill</label>
        <referenceTo>Fridge_In_Fills__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fridge_Sighted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fridge Sighted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Branding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Branding</label>
        <referenceTo>Fridge_In_Fills__c</referenceTo>
        <relationshipLabel>Assets (Internal Branding)</relationshipLabel>
        <relationshipName>Assets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checked Is Active</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Sighted__c</fullName>
        <label>Last Sighted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Code__c</fullName>
        <description>Unique Row Identifier</description>
        <externalId>true</externalId>
        <label>Legacy Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement_Date__c</fullName>
        <description>We are consider this placement date to be the actual start date.</description>
        <label>Placement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Asset__c</fullName>
        <label>SAP Asset #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <label>Serial #</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <picklist>
            <picklistValues>
                <fullName>Orford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cornelius</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Asset</label>
    <listViews>
        <fullName>All_Assets</fullName>
        <columns>NAME</columns>
        <columns>Asset_Model__c</columns>
        <columns>Serial__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AN-{0}</displayFormat>
        <label>Account Asset Code</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I30000002EvgMEAS_00N30000009cHs3EAE</fullName>
        <active>true</active>
        <field>Asset_Move__c.Asset__c</field>
        <filterItems>
            <field>Asset__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.New_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Asset Move_Asset</name>
        <sourceObject>Asset_Move__c</sourceObject>
    </namedFilters>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Agreement_If_Null</fullName>
        <active>false</active>
        <description>If Agreement is null then a new agreement has to be completed before asset can be saved.</description>
        <errorConditionFormula>ISBLANK( Agreement__c )</errorConditionFormula>
        <errorMessage>No Agreement has been linked to this asset.  Create an agreement and then save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Comments</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Fridge_Details_Incorrect__c = True  &amp;&amp;  ISBLANK(Comments__c), true, false )</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Explain why you disagree with data</errorMessage>
    </validationRules>
</CustomObject>